data/derived/comb/progs/unify/prog3429.ml.out
Characters 76-78:
  | Sine s -> Format.sprintf "%d" (sin (pi * e));;
                                        ^^
Error: This expression has type float but an expression was expected of type
         int
